--- a/veiws/home.ejs
+++ b/veiws/home.ejs
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
+    <%- include('./partials/head') %>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
 </head>
 <body>
-    
+    <%- include('./partials/nav') %>
+    <h1>hi i am  homepage</h1>
 </body>
-
+<%- include('./partials/scripts') %>
 </html>
